--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/security-csrf": "7.2.*",
         "symfony/stimulus-bundle": "^2.23",
         "symfony/twig-bundle": "7.2.*",
         "symfony/ux-turbo": "^2.23",
