--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,6 +10,11 @@ framework:
 
 when@test:
     framework:
+        csrf_protection: ~
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+        form:
+            csrf_protection:
+                enabled: true
+                field_name: 'custom_token_name'
